--- a/deployments/gitlab/Dockerfile-runner
+++ b/deployments/gitlab/Dockerfile-runner
@@ -13,22 +13,18 @@ RUN curl -SL https://golang.org/dl/go1.19.5.linux-amd64.tar.gz | tar -xzC /usr/l
 ENV PATH=/usr/local/go/bin:$PATH
 
 # Install trivy
-RUN curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.26.0
+RUN curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.34.0
 RUN curl https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/html.tpl > html.tpl
 
 # Install nancy
-RUN curl -sL https://github.com/sonatype-nexus-community/nancy/releases/download/v1.0.33/nancy-v1.0.33-linux-amd64 -o /usr/local/bin/nancy
+RUN curl -sL https://github.com/sonatype-nexus-community/nancy/releases/download/v1.0.42/nancy-v1.0.42-linux-amd64 -o /usr/local/bin/nancy
 RUN chmod +x /usr/local/bin/nancy
 
 # Install gosec
-RUN curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b /usr/local/go/bin v2.11.0
+RUN curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b /usr/local/go/bin v2.14.0
 
 # Install git
 RUN yum install -y git
-# Set repo access token (for faucet to access alphabill repo)
-# The access token is defined in https://gitdc.ee.guardtime.com/alphabill/alphabill/-/settings/ci_cd under Variables
-RUN git config --global url."https://token:glpat-ERLQPJ5LG11pfJcychvP@gitdc.ee.guardtime.com/alphabill/alphabill".insteadOf "https://gitdc.ee.guardtime.com/alphabill/alphabill"
-
 
 # Post-install cleanup
 RUN yum clean all
@@ -39,3 +35,7 @@ ENV GOPATH=/usr/local/go
 
 # Install cobertura
 RUN go install github.com/boumenot/gocover-cobertura@v1.2.0
+
+COPY go.mod go.sum ./
+RUN go mod download
+RUN rm ./go.mod ./go.sum
