--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,17 @@ init:
   script:
     - go env
 
+vet:
+  stage: test
+  script:
+    - go vet ./...
+
 test:
   stage: test
+  needs:
+    # tests are expensive compared to vet/gosec so do not start tests unless other jobs succeed
+    - vet
+    - gosec
   script:
     - gotestsum --junitfile report.xml --format standard-quiet -- ./... -coverpkg=./... -count=1 -coverprofile test-coverage.out
     - go tool cover -func test-coverage.out
