only require vet for test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,8 @@ vet:
 test:
   stage: test
   needs:
-    # tests are expensive compared to vet/gosec so do not start tests unless other jobs succeed
+    # tests are expensive compared to vet so do not start tests unless vet job succeeded
     - vet
-    - gosec
   script:
     - gotestsum --junitfile report.xml --format standard-quiet -- ./... -coverpkg=./... -count=1 -coverprofile test-coverage.out
     - go tool cover -func test-coverage.out
